--- a/index.html
+++ b/index.html
@@ -2,56 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- Full-screen on iOS when added to Home Screen -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <title>Responsive 10×10 Tic-Tac-Toe with Smart AI</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tic-Tac-Toe with Pattern-Heuristic AI</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    html, body {
-      margin: 0;
-      padding: env(safe-area-inset-top) env(safe-area-inset-right)
-               env(safe-area-inset-bottom) env(safe-area-inset-left);
-      height: 100vh;
-      width: 100vw;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #fff;
-      color: #333;
-      box-sizing: border-box;
-    }
-    .game-container {
-      width: 100%;
-      max-width: 100vw;
-      text-align: center;
-      box-sizing: border-box;
-    }
-    canvas {
-      display: block;
-      width: 100vw;   /* fill viewport width */
-      height: auto;   /* maintain square aspect */
-      max-height: 100vh; /* never overflow vertically */
-      border: 1px solid #e2e8f0;
-      border-radius: .5rem;
-      margin: 0 auto 1rem;
-    }
-    .status-message {
-      font-size: 1.25rem;
-      font-weight: bold;
-      margin-bottom: .5rem;
-    }
-    button {
-      background: #4299e1;
-      color: #fff;
-      padding: .75rem 1.5rem;
-      border: none;
-      border-radius: .5rem;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    button:hover { background: #3182ce; }
+    body { font-family:'Inter',sans-serif; background:#fff; color:#333;
+           display:flex; align-items:center; justify-content:center;
+           height:100vh; margin:0; }
+    .game-container { background:#fff; border-radius:1rem; padding:1.5rem;
+                     box-shadow:0 10px 15px rgba(0,0,0,0.1);
+                     display:flex; flex-direction:column; align-items:center; }
+    canvas { border:1px solid #e2e8f0; border-radius:.5rem; margin-bottom:1rem; }
+    .status-message { margin-bottom:.5rem; font-size:1.25rem; font-weight:bold; }
+    button { background:#4299e1; color:#fff; padding:.75rem 1.5rem;
+             border:none; border-radius:.5rem; font-weight:bold; cursor:pointer; }
+    button:hover { background:#3182ce; }
   </style>
 </head>
 <body>
@@ -60,41 +25,39 @@
     <canvas id="gameCanvas"></canvas>
     <button id="playAgainButton">Play Again</button>
   </div>
-
   <script>
-    const boardSize = 10,
+    const cellSize  = 50,
+          boardSize = 10,
           winLen    = 5;
-    let cellSize, board = new Map(),
-        currentPlayer = 'X', gameOver = false;
+
+    const board = new Map();
+    let currentPlayer = 'X', gameOver = false;
 
     const canvas = document.getElementById('gameCanvas'),
           ctx    = canvas.getContext('2d');
-    const statusDisplay   = document.getElementById('status'),
-          playAgainButton = document.getElementById('playAgainButton');
+    const statusDisplay   = document.getElementById('status');
+    const playAgainButton = document.getElementById('playAgainButton');
 
     function resizeCanvas() {
-      // full viewport width → dynamic cell size
-      cellSize = Math.floor(window.innerWidth / boardSize);
-      // set internal resolution
-      canvas.width  = cellSize * boardSize;
-      canvas.height = cellSize * boardSize;
-      // CSS width already 100vw, height auto; max-height ensures no vertical overflow
+      canvas.width  = boardSize * cellSize;
+      canvas.height = boardSize * cellSize;
       drawBoard();
     }
 
     function drawBoard() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
-      // background
       ctx.fillStyle = '#fff';
       ctx.fillRect(0, 0, canvas.width, canvas.height);
-      // grid lines
       ctx.strokeStyle = '#ccc';
       ctx.lineWidth = 1;
+      // grid
       for (let i = 0; i <= boardSize; i++) {
+        // vertical
         ctx.beginPath();
         ctx.moveTo(i*cellSize, 0);
         ctx.lineTo(i*cellSize, canvas.height);
         ctx.stroke();
+        // horizontal
         ctx.beginPath();
         ctx.moveTo(0, i*cellSize);
         ctx.lineTo(canvas.width, i*cellSize);
@@ -102,9 +65,9 @@
       }
       // stones
       board.forEach((p, key) => {
-        const [r, c] = key.split(',').map(Number);
-        ctx.font = `${cellSize * 0.6}px Arial`;
-        ctx.textAlign    = 'center';
+        const [r,c] = key.split(',').map(Number);
+        ctx.font = `${cellSize*0.6}px Arial`;
+        ctx.textAlign = 'center';
         ctx.textBaseline = 'middle';
         ctx.fillStyle = p === 'X' ? '#dc2626' : '#2563eb';
         ctx.fillText(p, c*cellSize + cellSize/2, r*cellSize + cellSize/2);
@@ -119,13 +82,13 @@
            );
     }
 
-    function checkWin(r, c, p) {
+    function checkWin(r,c,p) {
       const dirs = [[0,1],[1,0],[1,1],[1,-1]];
       return dirs.some(([dr,dc]) => {
         let cnt = 1;
-        for (let i = 1; i < winLen; i++)
+        for (let i=1; i<winLen; i++)
           if (board.get(`${r+dr*i},${c+dc*i}`) === p) cnt++; else break;
-        for (let i = 1; i < winLen; i++)
+        for (let i=1; i<winLen; i++)
           if (board.get(`${r-dr*i},${c-dc*i}`) === p) cnt++; else break;
         return cnt >= winLen;
       });
@@ -133,63 +96,66 @@
 
     function getEmpties() {
       const empties = [];
-      for (let r = 0; r < boardSize; r++)
-        for (let c = 0; c < boardSize; c++)
+      for (let r=0; r<boardSize; r++)
+        for (let c=0; c<boardSize; c++)
           if (!board.has(`${r},${c}`))
             empties.push({r,c});
       return empties;
     }
 
+    // Heuristic evaluation for a single empty cell (r,c)
     function evaluateCell(r, c) {
       let score = 0;
       const patterns = [
-        {weight:100000, count:winLen},           // five
-        {weight:10000,  count:winLen-1, openEnds:2}, // open-4
-        {weight:5000,   count:winLen-1, openEnds:1}, // half-open-4
-        {weight:1000,   count:winLen-2, openEnds:2}, // open-3
-        {weight:500,    count:winLen-2, openEnds:1}, // half-open-3
-        {weight:100,    count:winLen-3, openEnds:2}, // open-2
+        {weight:100000, count: winLen},     // five in a row
+        {weight:10000,  count: winLen-1, openEnds:2}, // open-four
+        {weight:5000,   count: winLen-1, openEnds:1}, // half-open four
+        {weight:1000,   count: winLen-2, openEnds:2}, // open-three
+        {weight:500,    count: winLen-2, openEnds:1}, // half-open three
+        {weight:100,    count: winLen-3, openEnds:2}, // open-two
       ];
-      const dirs = [[0,1],[1,0],[1,1],[1,-1]];
 
-      patterns.forEach(({weight,count,openEnds}) => {
+      const dirs = [[0,1],[1,0],[1,1],[1,-1]];
+      for (const {weight, count, openEnds} of patterns) {
+        // check for AI (“O”) patterns
         dirs.forEach(([dr,dc]) => {
           let c1=0, c2=0;
-          // forward “O”
-          for (let i=1; i<count; i++)
+          // forward
+          for (let i=1; i<=count-1; i++)
             if (board.get(`${r+dr*i},${c+dc*i}`)==='O') c1++; else break;
-          // backward “O”
-          for (let i=1; i<count; i++)
+          // backward
+          for (let i=1; i<=count-1; i++)
             if (board.get(`${r-dr*i},${c-dc*i}`)==='O') c2++; else break;
-          const total = c1 + c2 + 1;
-          let ends = 0;
+          const total = c1+c2+1;
+          // count open ends
+          let ends=0;
+          if (!board.has(`${r+dr*c1+dr},${c+dc*c1+dc}`)) ends++;
+          if (!board.has(`${r-dr*c2-dr},${c-dc*c2-dc}`)) ends++;
+          if (total>=count && (openEnds==null || ends>=openEnds)) score += weight;
+        });
+        // check for opponent (“X”) patterns, with slightly lower weight for blocking
+        dirs.forEach(([dr,dc]) => {
+          let c1=0, c2=0;
+          for (let i=1; i<=count-1; i++)
+            if (board.get(`${r+dr*i},${c+dc*i}`)==='X') c1++; else break;
+          for (let i=1; i<=count-1; i++)
+            if (board.get(`${r-dr*i},${c-dc*i}`)==='X') c2++; else break;
+          const total = c1+c2+1;
+          let ends=0;
           if (!board.has(`${r+dr*c1+dr},${c+dc*c1+dc}`)) ends++;
           if (!board.has(`${r-dr*c2-dr},${c-dc*c2-dc}`)) ends++;
           if (total>=count && (openEnds==null || ends>=openEnds))
-            score += weight;
-
-          // same for “X” (blocking weight)
-          c1=c2=0;
-          for (let i=1; i<count; i++)
-            if (board.get(`${r+dr*i},${c+dc*i}`)==='X') c1++; else break;
-          for (let i=1; i<count; i++)
-            if (board.get(`${r-dr*i},${c-dc*i}`)==='X') c2++; else break;
-          const tot2 = c1 + c2 + 1;
-          ends = 0;
-          if (!board.has(`${r+dr*c1+dr},${c+dc*c1+dc}`)) ends++;
-          if (!board.has(`${r-dr*c2-dr},${c-dc*c2-dc}`)) ends++;
-          if (tot2>=count && (openEnds==null || ends>=openEnds))
-            score += weight * 0.9;
+            score += weight * 0.9;  // block weight
         });
-      });
+      }
       return score;
     }
 
     function makeAIMove() {
       const empties = getEmpties();
-      if (!empties.length) return;
+      if (empties.length===0) return;
 
-      // immediate win/block
+      // 1) Immediate win/block (5 in a row)
       for (const {r,c} of empties) {
         board.set(`${r},${c}`,'O');
         if (checkWin(r,c,'O')) { board.delete(`${r},${c}`); return placeMark(r,c); }
@@ -200,8 +166,8 @@
         board.delete(`${r},${c}`);
       }
 
-      // pattern scoring
-      let bestScore = -Infinity, bestMove = empties[0];
+      // 2) Pattern-based scoring
+      let bestScore = -Infinity, bestMove = null;
       empties.forEach(({r,c}) => {
         const sc = evaluateCell(r,c);
         if (sc > bestScore) {
@@ -209,7 +175,13 @@
           bestMove = {r,c};
         }
       });
-      placeMark(bestMove.r, bestMove.c);
+
+      if (bestMove) {
+        return placeMark(bestMove.r, bestMove.c);
+      }
+      // fallback (should never hit)
+      const {r,c} = empties[0];
+      placeMark(r,c);
     }
 
     function placeMark(r,c) {
@@ -225,6 +197,7 @@
         currentPlayer = currentPlayer==='X' ? 'O' : 'X';
         updateStatus();
         if (currentPlayer==='O') {
+          // slight delay so you see your move
           setTimeout(makeAIMove, 50);
         }
       }
@@ -233,8 +206,8 @@
     canvas.addEventListener('click', e => {
       if (gameOver || currentPlayer!=='X') return;
       const rect = canvas.getBoundingClientRect();
-      const r = Math.floor((e.clientY - rect.top) / cellSize);
-      const c = Math.floor((e.clientX - rect.left) / cellSize);
+      const r = Math.floor((e.clientY-rect.top)/cellSize);
+      const c = Math.floor((e.clientX-rect.left)/cellSize);
       placeMark(r,c);
     });
 
@@ -247,8 +220,7 @@
     });
 
     window.addEventListener('resize', resizeCanvas);
-
-    // initial setup
+    // initial
     resizeCanvas();
     updateStatus();
   </script>
